Nueva ruta de verificacion de sesion
