# src/routes/auth.routes.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const { register, login } = require('../controllers/auth.controller');
+const { register, login, verify } = require('../controllers/auth.controller');
 
 router.post('/register', register);
 router.post('/login', login);
+router.get('/verify', verify)
 
 module.exports = router;
